fix scrolling on mobile by enabling pointer-events on heading tags

--- a/css/style.css
+++ b/css/style.css
@@ -9,10 +9,13 @@ html, body {
     -moz-osx-font-smoothing: grayscale !important;
     -webkit-font-smoothing: antialiased;
 }
-.info {
+.penone {
     pointer-events:none;
 }
-.info a {
+.peall {
+    pointer-events:all;
+}
+a {
     pointer-events: all;
 }
 .regular {
